Label non-infant child travelers by age.
Matching the initially searched for ages to Traveler objects
is a bit more involved than I would like, but is a necessary
step.

We must indicate the age of the child whose info the user is
editting because the age must correspond to the Traveler's
passengerCategory. If the traveler's birthdate does not match
the passengerCategory, then the checkout will fail. There
has been discussion around indicating age once the user is
actually on the traveler activity, but this makes it testable
for now.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1218,6 +1218,8 @@
     <string name="add_adult_number_TEMPLATE">Adult %1$s details</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">Child %1$s details</string>
+    <!-- Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_TEMPLATE">%1$s yr old details</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">Infant in Lap %1$s details</string>
     <!-- Add infant in seat traveler number template -->
